--- a/src/movies/site/app/templates/index.html
+++ b/src/movies/site/app/templates/index.html
@@ -1,30 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Example</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
 
 <main>
     <div style="display: block; text-align: center">
     <form method="POST" action="/">
-        {{ form.csrf_token}}
-        {{ form.choice.label }}{{ form.choice }}
-        {{ form.string_search.label }}{{ form.string_search }}
+        {{ data.csrf_token}}
+        {{ data.choice.label }}{{ data.choice }}
+        {{ data.string_search.label }}{{ data.string_search }}
     <input type="submit" value="Submit">
     </form>
     </div>
-
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        <ul class="flashes">
-        {% for message in messages %}
-          <li>{{ message }}</li>
-        {% endfor %}
-        </ul>
-      {% endif %}
-    {% endwith %}
 
     {% if not results.empty %}
         <h1 style="text-align: center; font-family: Futura, sans-serif">Results</h1>
@@ -35,7 +21,8 @@
                     <div style="font-family: Futura, sans-serif; font-weight: bold">{{ results.loc[i, ["movie_title"]][0] }}
                         <span style="font-family: Arial, sans-serif; font-size: 10pt; font-weight: normal">({{ results.loc[i, ["title_year"]][0] }})</span></div>
                     <div style="font-family: Arial, sans-serif; font-style: italic">Director-s: {{ results.loc[i, ["director"]][0] }}</div>
-
+                <a href="{{ url_for('recommendations', id=results.loc[i, ['index']][0]) }}">More movies like ></a>
+                <a href="{{ url_for('details', id=results.loc[i, ['index']][0]) }}">Details ></a>
                 </div>
 
             </div>
@@ -44,5 +31,5 @@
     {% endif %}
 </main>
 
-</body>
-</html>
+{% endblock %}
+
