Added css file to html

--- a/src/movies/site/app/templates/base.html
+++ b/src/movies/site/app/templates/base.html
@@ -7,6 +7,7 @@
     {% else %}
     <title>MovieDB</title>
     {% endif %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
 
