Added message (to be modified later)

--- a/src/movies/site/app/templates/index.html
+++ b/src/movies/site/app/templates/index.html
@@ -28,6 +28,8 @@
             </div>
         <div style="border-bottom: #333 solid 0.5px; width: 600px; margin: auto"></div>
         {% endfor %}
+    {% else %}
+    <p> Please enter something!</p>
     {% endif %}
 </main>
 
