--- a/src/movies/site/app/static/css/style.css
+++ b/src/movies/site/app/static/css/style.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html, body {
 	height: 100%;
 }
@@ -8,13 +14,37 @@ body {
     height: 500px;
     width: 700px;
     margin: 30px auto;
-    padding: 10px;
+}
+
+header {
+    height: 30px;
+    line-height: 30px;
+    border-bottom: 1px solid black;
+    background-color: white;
+    border-top-right-radius: 10px;
+	border-top-left-radius: 10px;
 }
 
 main {
     overflow-y: auto;
-    width: 700px;
-	height: 450px;
+    width: 698px;
+	height: 468px;
+	border-bottom-right-radius: 11px;
+	border-bottom-left-radius: 11px;
+	background-color: #ffffff;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='2' height='2' viewBox='0 0 8 8'%3E%3Cg fill='%23000000' fill-opacity='1'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+#search_bar {
+    margin: 50px;
+    padding: 15px;
+    display: block;
+    text-align: center;
+    background-color: white;
+    border-width: 1px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 10px;
 }
 
 .director {
@@ -26,12 +56,13 @@ main {
   display: flex;
   flex-wrap: wrap;
   margin: auto;
-  height: 300px
+  margin-bottom: 25px;
 }
 
 .results > ul > li {
   list-style: none;
-  width: 27.5%;
+  height: 300px;
+  width: 30.5%;
   margin-right: 8px;
   margin-bottom: 8px;
   padding: 10px;
@@ -39,19 +70,31 @@ main {
   border-style: solid;
   border-color: black;
   border-radius: 10px;
+  background-color: white;
 }
 
-.results_poster {
+.results_poster, .initial_poster {
     border-radius: 10px;
     display: block;
-    width: 100px;
-    margin: 10px auto 15px auto;
+    margin: auto;
+    height: 147px;
+}
+
+.initial_poster {
+    float: left;
+    margin: 10px;
+}
+
+.recommended_title {
+    width: 75%;
+    height: 200px;
+    margin: 20px auto;
 }
 
 .results_title, .results_year {
     text-align: center;
     font-family: Futura, sans-serif;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 .results_title {
@@ -63,12 +106,12 @@ main {
 }
 
 .results_links {
-   margin: 13px;
+    height:33px;
+    text-align: center;
 }
 
-a.results_link {
+a.results_link_1, a.results_link_2 {
     padding: 8px;
-    margin: 5px;
     border-width: 1px 3px 3px 1px;
     border-style: solid;
     border-color: black;
@@ -78,11 +121,17 @@ a.results_link {
     font-family: Futura, sans serif;
     text-decoration: none;
     color: black;
-    width: 30%;
-    display: block;
-    float: left;
 }
 
-a.results_link:hover {
+a.results_link_2 {
+    margin-left: 8px;
+}
+
+a.results_link_1:hover, a.results_link_2:hover {
     border-width: 2px;
+}
+
+.movie_details {
+    height:100px;
+    padding: 10px;
 }
