--- a/src/movies/site/app/static/css/style.css
+++ b/src/movies/site/app/static/css/style.css
@@ -19,10 +19,49 @@ body {
 header {
     height: 30px;
     line-height: 30px;
+    font-family: Futura, sans serif;
+    font-size: 14px;
     border-bottom: 1px solid black;
     background-color: white;
     border-top-right-radius: 10px;
 	border-top-left-radius: 10px;
+}
+
+a.header_link {
+    text-decoration: none;
+    color: black;
+    padding: 5px;
+}
+
+a.header_link:hover {
+    text-decoration: none;
+    color: white;
+    background-color: black;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #FFF;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23000000' fill-opacity='1' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+  border-left: 1px solid black;
+  border-bottom-right-radius: 10px;
+}
+
+.movie_storyline_container::-webkit-scrollbar-track {
+  border-top-right-radius: 10px;
+  border-right: 1px solid black;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: white;
+  border: 1px solid black;
+    border-radius: 10px;
 }
 
 main {
@@ -35,8 +74,19 @@ main {
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='2' height='2' viewBox='0 0 8 8'%3E%3Cg fill='%23000000' fill-opacity='1'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
+header > ul {
+    list-style: none;
+    padding: 0;
+    display: inline;
+}
+
+header > ul > li {
+    display: inline;
+    margin-left: 8px;
+}
+
 #search_bar {
-    margin: 50px;
+    margin: 40px;
     padding: 15px;
     display: block;
     text-align: center;
@@ -45,11 +95,26 @@ main {
   border-style: solid;
   border-color: black;
   border-radius: 10px;
+  font-family: Futura, sans serif;
+  font-size: 14px;
 }
 
-.director {
-    font-family: Arial, sans-serif;
-    font-style: italic;
+.string_field, .dropdown_list {
+  font-family: courier, sans serif;
+  font-size: 12px;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: white;
+}
+
+.string_field {
+width: 150px;
+}
+
+.dropdown_list {
+height: 26px;
+position: relative; top: -1px;
 }
 
 .results > ul {
@@ -82,13 +147,40 @@ main {
 
 .initial_poster {
     float: left;
-    margin: 10px;
+    margin-right: 8px;
 }
 
 .recommended_title {
     width: 75%;
-    height: 200px;
+    height: 170px;
     margin: 20px auto;
+    padding: 10px;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.recommended_title > p {
+    margin: 8px 8px;
+}
+
+.text {
+    font-family: Futura, sans serif;
+    font-size: 12px;
+}
+
+.text > p {
+    display: block;
+    line-height: 3px;
+}
+
+.movie_storyline_container {
+    overflow-y: auto;
+    height: 70px;
+    font-size: 12px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px;
 }
 
 .results_title, .results_year {
@@ -110,28 +202,81 @@ main {
     text-align: center;
 }
 
-a.results_link_1, a.results_link_2 {
+a.results_link_1, a.results_link_2, .submit_button {
     padding: 8px;
-    border-width: 1px 3px 3px 1px;
+    border-width: 1px;
     border-style: solid;
     border-color: black;
     border-radius: 8px;
-    font-size: 10px;
+    font-size: 11px;
     text-align: center;
     font-family: Futura, sans serif;
     text-decoration: none;
     color: black;
+    background-color: white;
+    cursor: pointer !important;
 }
 
-a.results_link_2 {
+a.results_link_2, .submit_button {
     margin-left: 8px;
 }
 
-a.results_link_1:hover, a.results_link_2:hover {
-    border-width: 2px;
+a.results_link_1:hover, a.results_link_2:hover, .submit_button:hover {
+    color: white;
+    background-color: black;
 }
 
 .movie_details {
     height:100px;
     padding: 10px;
+}
+
+h1 {
+    text-align: center;
+    font-family: Futura, sans-serif;
+    font-size: 22px;
+}
+
+.details_container {
+width: 650px;
+height: 425px;
+margin: 20px auto;
+background-color: white;
+border: 1px solid black;
+border-radius: 10px;
+}
+
+.details_container_header {
+height: 30px;
+border-bottom: 1px solid black;
+font-family: Futura, sans serif;
+font-size: 14px;
+line-height: 30px;
+text-align: center;
+color: white;
+background-color: black;
+border-top-left-radius: 9px;
+border-top-right-radius: 9px;
+}
+
+.details_poster {
+    margin: 30px 20px;
+    display: block;
+    width: 180px;
+    border-radius: 10px;
+}
+
+.details_left {
+    float: left;
+    width: 220px;
+}
+
+.details_imdb_score {
+    font-family: Futura, sans serif;
+    font-size: 20px;
+    text-align: center;
+}
+
+.details_imdb_score > span {
+    font-weight: bold;
 }
