--- a/src/movies/site/app/templates/index.html
+++ b/src/movies/site/app/templates/index.html
@@ -6,17 +6,17 @@
     <div id="search_bar">
     <form method="POST" action="/">
         {{ form.csrf_token}}
-        {{ form.chosen_type.label }}{{ form.chosen_type }}
-        {{ form.string_search }}
-        {{ form.chosen_column_order.label }}{{ form.chosen_column_order }}
-    <input type="submit" value="Submit">
+        {{ form.chosen_type.label }}{{ form.chosen_type(class="dropdown_list") }}
+        {{ form.string_search(class="string_field") }}
+        {{ form.chosen_column_order.label }}{{ form.chosen_column_order(class="dropdown_list") }}
+    <input type="submit" value="Submit" class="submit_button">
     </form>
     </div>
 
     <section>
         {% include '_messages.html' %}
         {% if not results.empty %}
-            <h1 style="text-align: center; font-family: Futura, sans-serif">Results</h1>
+            <h1>Results</h1>
             <div class="results">
                 <ul>
                     {% for i in results.index %}
