index.html only for search now

--- a/src/movies/site/app/templates/index.html
+++ b/src/movies/site/app/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <main>
-    <div id="search_bar">
+    <div id="search_bar" style="margin-top: 150px">
     <form method="POST" action="/">
         {{ form.csrf_token}}
         {{ form.chosen_type.label }}{{ form.chosen_type(class="dropdown_list") }}
@@ -15,18 +15,7 @@
 
     <section>
         {% include '_messages.html' %}
-        {% if not results.empty %}
-            <h1>Results</h1>
-            <div class="results">
-                <ul>
-                    {% for i in results.index %}
-                        {% include '_items.html' %}
-                    {% endfor %}
-                </ul>
-            </div>
-        {% endif %}
     </section>
 </main>
 
 {% endblock %}
-
