--- a/src/movies/site/app/static/css/style.css
+++ b/src/movies/site/app/static/css/style.css
@@ -152,7 +152,7 @@ position: relative; top: -1px;
 
 .recommended_title {
     width: 75%;
-    height: 170px;
+    height: 230px;
     margin: 20px auto;
     padding: 10px;
     background-color: white;
@@ -202,7 +202,7 @@ position: relative; top: -1px;
     text-align: center;
 }
 
-a.results_link_1, a.results_link_2, .submit_button {
+a.results_link_1, a.results_link_2, .submit_button, .back_link {
     padding: 8px;
     border-width: 1px;
     border-style: solid;
@@ -221,7 +221,7 @@ a.results_link_1, .submit_button {
     margin-left: 8px;
 }
 
-a.results_link_1:hover, a.results_link_2:hover, .submit_button:hover {
+a.results_link_1:hover, a.results_link_2:hover, .submit_button:hover, .back_link:hover {
     color: white;
     background-color: black;
 }
@@ -260,7 +260,7 @@ border-top-right-radius: 9px;
 }
 
 .details_poster {
-    margin: 30px 20px;
+    margin: 16px 20px;
     display: block;
     width: 180px;
     border-radius: 10px;
@@ -279,4 +279,10 @@ border-top-right-radius: 9px;
 
 .details_imdb_score > span {
     font-weight: bold;
+}
+
+.back_link {
+display: block;
+width: 130px;
+margin: 20px auto;
 }
