--- a/src/movies/site/app/templates/details.html
+++ b/src/movies/site/app/templates/details.html
@@ -3,8 +3,6 @@
 {% block content %}
 
 <main>
-
-    <a href=" {{ url_for('search', chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column) }}">< Back</a>
     <div class="details_container">
         <div class="details_container_header">{{ results["movie_title"] }}</div>
 
@@ -15,6 +13,7 @@
                 <div class="details_imdb_score">
                     <span>{{ results["imdb_score"] }}</span>/10
                 </div>
+                <a href=" {{ url_for('search', chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column) }}" class="back_link"><strong><</strong> Back to the results</a>
             </div>
 
             <div>
