--- a/src/movies/site/app/templates/recommendations.html
+++ b/src/movies/site/app/templates/recommendations.html
@@ -4,7 +4,6 @@
 
 <main>
 
-    <a href=" {{ url_for('search', chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column) }}">< Back</a>
     <h1>Recommendations for</h1>
 
     <div class="recommended_title">
@@ -25,6 +24,7 @@
             {% endif %}
             <p><strong>Storyline:</strong>
             <div class="movie_storyline_container">{{ initial_movie["storyline"] }}</div></p>
+            <a href=" {{ url_for('search', chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column) }}" class="back_link"><strong><</strong> Back to the results</a>
         </div>
 
     </div>
