--- a/src/movies/site/app/templates/details.html
+++ b/src/movies/site/app/templates/details.html
@@ -13,7 +13,7 @@
                 <div class="details_imdb_score">
                     <span>{{ results["imdb_score"] }}</span>/10
                 </div>
-                <a href=" {{ url_for('search', chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column) }}" class="back_link"><strong><</strong> Back to the results</a>
+                <a href=" {{ url_for('search', chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column) }}" class="back_link"><strong><</strong> Back to results</a>
             </div>
 
             <div>
