--- a/src/movies/site/app/templates/base.html
+++ b/src/movies/site/app/templates/base.html
@@ -8,6 +8,9 @@
     <title>MovieDB</title>
     {% endif %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/recommendations_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/details_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/results_style.css') }}">
 </head>
 <body>
 
