--- a/src/movies/site/app/templates/details.html
+++ b/src/movies/site/app/templates/details.html
@@ -11,9 +11,9 @@
                     <img src="{{ results['poster'] }}" alt="poster" class="details_poster">
                 </a>
                 <div class="details_imdb_score">
-                    <span>{{ results["imdb_score"] }}</span>/10
+                    <strong>{{ results["imdb_score"] }}</strong>/10
                 </div>
-                <a href=" {{ url_for('search', chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column) }}" class="back_link"><strong><</strong> Back to results</a>
+                <a href=" {{ url_for('search', chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column) }}" class="details_back_link"><strong><</strong> Back to results</a>
             </div>
 
             <div>
