--- a/src/movies/site/app/templates/search.html
+++ b/src/movies/site/app/templates/search.html
@@ -16,7 +16,7 @@
         {% include '_messages.html' %}
         {% if not results.empty %}
             <h1>Results</h1>
-            <div class="results">
+            <div class="results_container">
                 <ul>
                     {% for i in results.index %}
                         {% include '_items.html' %}
