Added js function for sub-menu

--- a/src/movies/site/app/templates/base.html
+++ b/src/movies/site/app/templates/base.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     {% if title %}
-    <title>{{ title }} - MovieDB</title>
+        <title>{{ title }} - MovieDB</title>
     {% else %}
-    <title>MovieDB</title>
+        <title>MovieDB</title>
     {% endif %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/recommendations_style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/details_style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/results_style.css') }}">
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+
 </head>
 <body>
 
