--- a/src/movies/site/app/static/css/details_style.css
+++ b/src/movies/site/app/static/css/details_style.css
@@ -65,3 +65,71 @@
 }
 
 /* RIGHT SIDE */
+
+.details_right {
+    overflow: hidden;
+    padding: 15px 15px 15px 0px;
+}
+
+.details_tab_container {
+    margin-top: 15px;
+}
+
+#details_bar {
+    width: 100%;
+    height: 33px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    border-radius: 10px;
+
+}
+
+.details_item_1, .details_item_2 {
+    background-color: white;
+    color: black;
+    border: 0;
+    cursor: pointer !important;
+    width: 50%;
+    margin: 0;
+    height: 31px;
+    font-family: Futura, sans serif;
+    font-size: 12px;
+}
+
+.details_item_1 {
+    border-top-left-radius: 9px;
+    border-bottom-left-radius: 9px;
+    border-right: 1px solid black;
+}
+
+.details_item_2 {
+    border-top-right-radius: 9px;
+    border-bottom-right-radius: 9px;
+}
+
+.details_item_1:hover, .details_item_2:hover {
+    background-color: black;
+    color: white;
+}
+
+.category {
+    padding: 15px;
+    font-family: Futura, sans-serif;
+    font-size: 13px;
+}
+
+.details_storyline {
+    overflow-y: auto;
+    height: 120px;
+    font-size: 12px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px 10px;
+}
+
+.details_storyline::-webkit-scrollbar-track {
+    border-top-right-radius: 10px;
+    /* border-right: 1px solid black; */
+}
