--- a/src/app/templates/recommendations.html
+++ b/src/app/templates/recommendations.html
@@ -13,7 +13,8 @@
             <a href=" {{ url_for('search',
                         chosen_type=chosen_type,
                         string_search=string_search,
-                        chosen_column=chosen_column) }}" class="recommended_back_link"><strong><</strong> Back to results</a>
+                        chosen_column=chosen_column,
+                        page=page) }}" class="recommended_back_link"><strong><</strong> Back to results</a>
         </div>
 
         <div class="recommendations_right">
