--- a/src/app/templates/details.html
+++ b/src/app/templates/details.html
@@ -17,7 +17,7 @@
                     <strong>{{ results.imdb_score }}</strong>/10
                 </div>
 
-                <a href=" {{ url_for('search', chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column, page=page) }}" class="details_back_link"><strong><</strong> Back to results</a>
+                <a href=" {{ url_for('search', chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column, chosen_order=chosen_order, page=page) }}" class="details_back_link"><strong><</strong> Back to results</a>
 
             </div>
 
