Put the search bar in a separate file

--- a/src/app/templates/search.html
+++ b/src/app/templates/search.html
@@ -3,36 +3,29 @@
 {% block content %}
 
 <main>
-    <div id="search_bar">
-    <form method="POST" action="/">
-        {{ form.csrf_token}}
-        {{ form.chosen_type.label }}{{ form.chosen_type(class="dropdown_list") }}
-        {{ form.string_search(class="string_field") }}
-        {{ form.chosen_column_order.label }}{{ form.chosen_column_order(class="dropdown_list") }}{{ form.chosen_order(class="dropdown_list") }}
-    <input type="submit" value="Submit" class="submit_button">
-    </form>
-    </div>
+
     <section>
-        {% include '_messages.html' %}
-        {% if results %}
-            <h1>Results</h1>
-            <div class="results_container">
-                <ul>
-                    {% for movie in results %}
-                        {% include '_items.html' %}
-                    {% endfor %}
-                </ul>
-            </div>
+        {% include '_searchbar.html' %}
+    </section>
 
-            {% if prev_url %}
-                <a href="{{ prev_url }}"><</a>
-            {% endif %}
-            {{ page }}/{{ pages }}
-            {% if next_url %}
-                <a href="{{ next_url }}">></a>
-            {% endif %}
+    <section>
+        <h1>Results</h1>
+        <div class="results_container">
+            <ul>
+                {% for movie in results %}
+                    {% include '_items.html' %}
+                {% endfor %}
+            </ul>
+        </div>
 
+        {% if prev_url %}
+            <a href="{{ prev_url }}"><</a>
         {% endif %}
+        {{ page }}/{{ pages }}
+        {% if next_url %}
+            <a href="{{ next_url }}">></a>
+        {% endif %}
+
     </section>
 </main>
 
