--- a/src/app/templates/_searchbar.html
+++ b/src/app/templates/_searchbar.html
@@ -1,4 +1,4 @@
-<div id="search_bar">
+<div class="search_bar">
     <form method="POST" action="/">
         {{ form.csrf_token}}
         <div class="search_label">{{ form.chosen_type.label }}</div>
@@ -7,7 +7,7 @@
             {{ form.chosen_column_order.label }}{{ form.chosen_column_order(class="dropdown_list") }}{{ form.chosen_order(class="dropdown_list") }}
         </div>
         <div class="search_submit">
-            <input type="submit" value="Submit" class="submit_button">
+            <input type="submit" value="Submit">
         </div>
     </form>
 </div>
