--- a/src/app/static/css/style.css
+++ b/src/app/static/css/style.css
@@ -92,13 +92,13 @@ h1 {
     border-radius: 10px;
 }
 
+/* SEARCH BAR */
 
-
-.searchindex {
+.search_index {
     margin-top: 150px;
 }
 
-#search_bar {
+.search_bar {
     width: 550px;
     margin: 20px auto;
     padding: 15px;
@@ -113,12 +113,26 @@ h1 {
     font-size: 14px;
 }
 
+.search_label {
+    float:left;
+    text-align: center;
+    width: 59px;
+    height: 58px;
+    line-height: 58px;
+}
+
+.search_form {
+    width: 390px;
+    text-align: center;
+    float:left;
+}
+
 .string_field, .dropdown_list {
     padding: 5px;
     background-color: white;
     border: 1px solid black;
     border-radius: 5px;
-    font-family: courier, sans serif;
+    font-family: Futura, sans serif;
     font-size: 12px;
 }
 
@@ -140,7 +154,7 @@ h1 {
     padding-top: 10px;
 }
 
-.submit_button {
+.search_submit > input {
     padding: 8px;
     border-width: 1px;
     border-style: solid;
@@ -155,21 +169,7 @@ h1 {
     cursor: pointer !important;
 }
 
-.submit_button:hover {
+.search_submit > input:hover {
     color: white;
     background-color: black;
-}
-
-.search_label {
-    float:left;
-    text-align: center;
-    width: 59px;
-    height: 58px;
-    line-height: 58px;
-}
-
-.search_form {
-    width: 390px;
-    text-align: center;
-    float:left;
 }
