--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -4,7 +4,7 @@
 
 <main>
 
-    <section class="searchindex">
+    <section class="search_index">
         {% include '_searchbar.html' %}
     </section>
 
