--- a/src/app/static/css/results_style.css
+++ b/src/app/static/css/results_style.css
@@ -11,9 +11,10 @@
     margin-right: 8px;
     margin-bottom: 8px;
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid white;
+    box-shadow: 1px 1px 5px 2px #e6e6e6;
     border-radius: 10px;
-    background-color: white;
+    background-color: #FBFBFB;
 }
 
 /* INFO */
@@ -50,16 +51,15 @@
 
 a.results_link_details, a.results_link_reco {
     padding: 8px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
+    border: 1px solid #e6e6e6;
     border-radius: 8px;
+    box-shadow: 1px 1px 5px 2px #e6e6e6;
     font-size: 11px;
     text-align: center;
     font-family: Futura, sans serif;
     text-decoration: none;
     color: black;
-    background-color: white;
+    background-color: #FBFBFB;
     cursor: pointer !important;
 }
 
@@ -68,6 +68,6 @@ a.results_link_reco {
 }
 
 a.results_link_details:hover, a.results_link_reco:hover {
-    color: white;
-    background-color: black;
+    color: black;
+    background: -webkit-linear-gradient(bottom, #ffffff 0%, #e6e6e6 100%);
 }
