--- a/src/app/static/css/recommendations_style.css
+++ b/src/app/static/css/recommendations_style.css
@@ -3,8 +3,9 @@
     height: 227px;
     margin: 20px auto;
     padding: 10px;
-    background-color: white;
-    border: 1px solid black;
+    background-color: #FBFBFB;
+    box-shadow: 1px 1px 5px 2px #e6e6e6;
+    border: 1px solid white;
     border-radius: 10px;
 }
 
@@ -28,24 +29,23 @@
     float:left;
     display: block;
     width: 110px;
-    margin: 10px 0px;
+    margin: 10px 0;
     padding: 8px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
+    border: 1px solid #e6e6e6;
     border-radius: 8px;
+    box-shadow: 1px 1px 5px 2px #e6e6e6;
     font-size: 11px;
     text-align: center;
     font-family: Futura, sans serif;
     text-decoration: none;
     color: black;
-    background-color: white;
+    background-color: #FBFBFB;
     cursor: pointer !important;
 }
 
 .recommended_back_link:hover {
-    color: white;
-    background-color: black;
+    color: black;
+    background: -webkit-linear-gradient(bottom, #ffffff 0%, #e6e6e6 100%);
 }
 
 /* RIGHT SIDE */
@@ -81,13 +81,15 @@
 
 .recommended_storyline_container {
     overflow-y: auto;
-    height: 105px;
+    height: 93px;
     font-size: 12px;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 10px;
-    padding: 5px 10px;
+    padding: 10px 15px;
+    box-shadow: inset 1px 1px 5px 2px #e6e6e6;
 }
 
 .recommended_storyline_container::-webkit-scrollbar-track {
     border-top-right-radius: 10px;
+    background-color: transparent;
 }
