--- a/src/app/static/css/style.css
+++ b/src/app/static/css/style.css
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html, body {
@@ -9,7 +9,8 @@ html, body {
 }
 
 body {
-    border: 1px solid black;
+    border: 1px solid white;
+    box-shadow: 1px 1px 5px 2px #e6e6e6;
     border-radius: 10px;
     height: 500px;
     width: 700px;
@@ -21,8 +22,8 @@ header {
     line-height: 30px;
     font-family: Futura, sans serif;
     font-size: 14px;
-    border-bottom: 1px solid black;
-    background-color: white;
+    border-bottom: 1px solid #e6e6e6;
+    background-color: #FBFBFB;
     border-top-right-radius: 10px;
 	border-top-left-radius: 10px;
 }
@@ -46,28 +47,25 @@ a.header_link {
 
 a.header_link:hover {
     text-decoration: none;
-    color: white;
-    background-color: black;
+    color: #D6D6D6;
 }
 
 /* width */
 ::-webkit-scrollbar {
-  width: 12px;
+    width: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background-color: #FFF;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23000000' fill-opacity='1' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
-  border-left: 1px solid black;
-  border-bottom-right-radius: 10px;
+    background-color: #FBFBFB;
+    border-bottom-right-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: white;
-  border: 1px solid black;
+    background: #D6D6D6;
     border-radius: 10px;
+    margin: 0;
 }
 
 main {
@@ -76,20 +74,14 @@ main {
 	height: 468px;
 	border-bottom-right-radius: 11px;
 	border-bottom-left-radius: 11px;
-	background-color: #ffffff;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='2' height='2' viewBox='0 0 8 8'%3E%3Cg fill='%23000000' fill-opacity='1'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
+	background-color: #FBFBFB;
 }
 
 h1 {
     text-align: center;
     font-family: Futura, sans-serif;
     font-size: 22px;
-    background-color: white;
-    width: 88%;
-    margin: 20px auto;
-    padding: 5px;
-    border: 1px solid black;
-    border-radius: 10px;
+    margin: 25px auto;
 }
 
 /* SEARCH BAR */
@@ -103,18 +95,19 @@ h1 {
     margin: 20px auto;
     padding: 15px;
     overflow: auto;
-    background-color: white;
+    background-color: #FBFBFB;
+    box-shadow: 1px 1px 5px 2px #e6e6e6;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 10px;
     font-family: Futura, sans serif;
     font-size: 14px;
 }
 
 .search_label {
-    float:left;
+    float: left;
     text-align: center;
     width: 59px;
     height: 58px;
@@ -124,13 +117,13 @@ h1 {
 .search_form {
     width: 390px;
     text-align: center;
-    float:left;
+    float: left;
 }
 
 .string_field, .dropdown_list {
     padding: 5px;
-    background-color: white;
-    border: 1px solid black;
+    background-color: #FBFBFB;
+    border: 1px solid #D6D6D6;
     border-radius: 5px;
     font-family: Futura, sans serif;
     font-size: 12px;
@@ -156,20 +149,19 @@ h1 {
 
 .search_submit > input {
     padding: 8px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
+    border: 1px solid #e6e6e6;
     border-radius: 8px;
+    box-shadow: 1px 1px 5px 2px #e6e6e6;
     font-size: 11px;
     text-align: center;
     font-family: Futura, sans serif;
     text-decoration: none;
     color: black;
-    background-color: white;
+    background-color: #FBFBFB;
     cursor: pointer !important;
 }
 
 .search_submit > input:hover {
-    color: white;
-    background-color: black;
+    color: black;
+    background: -webkit-linear-gradient(bottom, #ffffff 0%, #e6e6e6 100%);
 }
